# tiago_ros_pkgs

tiago_clf_launch/: CMakeLists.txt
tiago_clf_launch/config/: config-kinetic.rviz  joypad_8bitdo.yaml  realsense_fixed.yaml  tiago_motions.yaml
tiago_clf_launch/launch/: clf_joypad.launch  rs_D455_calibration.launch  rs_l515_calibration.launch
tiago_clf_launch/scripts/: clf_joy  joy_teleop
tiago_clf_nav/config/: gmcl.yaml  neo_localization.yaml
tiago_clf_nav/config/cartographer/: tiago.lua  tiago_imu.lua  tiago_localization.lua  tiago_odom.lua
tiago_clf_nav/launch/: cartographer.launch  cartographer_localization.launch  gmcl.launch  map_server_obstacles.launch  neo_localization.launch
tiago_clf_nav/maps/real/: apartment_2026.pgm  apartment_2026.yaml  apartment_2026_aligned.pgm  apartment_2026_aligned.yaml  clf_coffee_kitchen_challenge_24.pgm  clf_coffee_kitchen_challenge_24.yaml  clf_comfy.pgm  clf_comfy.yaml  clf_comfy_rotated.pgm  clf_comfy_rotated.yaml  clf_hl.pgm  clf_hl.yaml  cologne2026.pgm  cologne2026.yaml  cologne2026_raw.pgm  cologne2026_raw.yaml  csra_comfy_demo.pgm  csra_comfy_demo.yaml  csra_study_hri_ue.pgm  csra_study_hri_ue.yaml  german_open2025.pgm  german_open2025.yaml  german_open2025_unclean.pgm  german_open2025_unclean.yaml  homecoming_25.pgm  homecoming_25.yaml  homecoming_26.pgm  homecoming_26.yaml  homecoming_26_obs.pgm  homecoming_26_obs.yaml  (+2 more)
tiago_moveit_config/config/: padding.yaml  sensors_rgbd.yaml
tiago_moveit_config/launch/: move_group.launch  sensor_manager.launch.xml  tiago_moveit_sensor_manager.launch.xml
(+9 files in other folders)
